# A

./: .gitattributes  .gitignore  README.md  pyproject.toml
astock_momentum_selector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
astock_quant/: __init__.py
astock_quant/backtest/: __init__.py  broker.py  engine.py  metrics.py  trade.py
astock_quant/config/: loader.py
astock_quant/data/: __init__.py  adapter.py  astock_data_adapter.py  astock_skill_sources.py  cleaner.py  storage.py
astock_quant/features/: fund_flow.py  market_cap.py  momentum.py  pattern.py  reversal.py  sector.py  (+2 more)
config/: default.yaml
docs/: data_adapter_design.md  data_availability_assessment.md  real_data_validation_report.md  strategy_design.md
scripts/: analyze_factor_ic.py  check_data_source.py  daily_update.py  generate_report.py  ingest_baostock.py  ingest_concepts.py  run_backtest.py  run_batch_signals.py  run_selection.py  update_data.py  validate_real_data.py
tests/: test_analyze_factor_ic.py  test_astock_data_adapter_live_fallback.py  test_astock_skill_sources.py  test_backtest_engine.py  test_check_data_source.py  test_continue_hold.py  test_daily_report.py  test_daily_update.py  test_ingest_baostock.py  test_ingest_concepts.py  test_market_cap_factor.py  test_no_future_leakage.py  test_overheat_filter.py  test_review_fixes.py  test_rps_factor.py  test_run_selection_pipeline.py  test_score_engine.py  test_sector_rps_factor.py  test_sentiment_factor.py  test_stage1_factor_rewrite.py  test_storage_manager.py  test_universe_filters.py  test_validate_real_data.py
(+15 files in other folders)
